crates/compiler/src/tests/e2e/good/0360_trait_show_dyn_impl/main.gom
trait Show {
    fn show(Self) -> string;
}

struct Num { n: int32 }
impl Show for Num { fn show(self: Num) -> string { self.n.to_string() } }

fn printer(x: dyn Show) {
    println(Show::show(x));
}

fn main() {
    printer(Num { n: 42 });
}
