crates/compiler/src/tests/e2e/bad/0026_trait_param_arity_mismatch/main.gom
trait Transformer {
  fn transform(Self, int32, int32) -> int32;
}

struct Scaler {
  factor: int32,
}

impl Transformer for Scaler {
  fn transform(self: Scaler, n: int32) -> int32 {
    n * self.factor
  }
}

fn main() -> unit {
  ()
}
